<resources>
    <string name="app_name">Contact Tracing</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="error">An error has occurred. Please try again.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="bullet">•</string>
    <string name="permission_denied">This application requires location permissions to function.</string>
    <string name="yes">Yes</string>
    <string name="negative_label">Have you tested positive for Covid-19?</string>
    <string name="positive_label">Are you no longer infected with Covid-19?</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>